--- a/gb/12/7/9/n3631583.md
+++ b/gb/12/7/9/n3631583.md
@@ -1,29 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wlrgim293/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wlrgim293/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wlrgim293/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wlrgim293/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wlrgim293/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>千古奇冤！7·20法轮功反迫害13年美国首都活动通告</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/07/1207092249322404-600x400.jpg" />
 <h6>2012年7月12日、13日，来自全球约五千名法轮功学员将汇集美国首都华府国会山庄和华盛顿纪念碑前，举行大规模集会，抗议中共江泽民集团自1999年7月20日至今13年来对法轮功团体的残酷迫害，呼吁美国及全球各国政府和社会各界民众支持、声援“解体中共、停止迫害法轮功”。图为美国首都华府国会山庄。（大纪元资料图片） 
 </h6>
 <hr>
-	<p>【大纪元2012年07月10日讯】（大纪元记者唐文综合报导）7月12日、13日，来自全球约五千名<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员将汇集<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E9%A6%96%E9%83%BD.md#1">美国首都</a>华府，举行大规模游行、集会，抗议中共江泽民集团自1999年7月20日至今13年来对法轮功团体的残酷迫害，呼吁“解体中共、停止迫害法轮功”。 </p>
-<p>今年2月王立军事件爆发后，国际媒体纷纷曝光中共高层政治海啸的关键因素——<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>问题是焦点，另外王立军提供给美国领事馆资源中包括关于活摘法轮功学员器官等骇人听闻事件及法轮功受迫害的真相，国际社会开始意识到法轮功问题是中国的核心问题，攸关世界大局。</p>
+	<p>【大纪元2012年07月10日讯】（大纪元记者唐文综合报导）7月12日、13日，来自全球约五千名<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员将汇集<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E9%A6%96%E9%83%BD.md#1">美国首都</a>华府，举行大规模游行、集会，抗议中共江泽民集团自1999年7月20日至今13年来对法轮功团体的残酷迫害，呼吁“解体中共、停止迫害法轮功”。 </p>
+<p>今年2月王立军事件爆发后，国际媒体纷纷曝光中共高层政治海啸的关键因素——<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>问题是焦点，另外王立军提供给美国领事馆资源中包括关于活摘法轮功学员器官等骇人听闻事件及法轮功受迫害的真相，国际社会开始意识到法轮功问题是中国的核心问题，攸关世界大局。</p>
 <p>真相即将全面曝光，各国政府及民众正面临重大选择。法轮功团体今年“7·20”反迫害活动，备受国际关注。</p>
-<p><B><ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E9%A6%96%E9%83%BD.md#1">美国首都</a>“解体中共 停止迫害法轮功”大集会</B></p>
-<p>自1999年7月20日，中共江泽民发动迫害法轮功修炼者以来，几乎每年的7月20日左右，世界各地的各族裔部分法轮功修炼者都云集美国首都<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md#1">华盛顿DC</a>，举行大规模游行、集会活动，抗议中共迄今长达13年的惨无人道迫害行径，呼吁美国及全球各国政府和社会各界支持、声援“解体中共、停止迫害法轮功”。</p>
-<p>据法轮大法<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md#1">华盛顿DC</a>佛学会负责协调集会活动的薛斌先生介绍，今年约有5,000名世界各地的各族裔部分法轮功修炼者汇集华盛顿DC，参加连续两天的数个集会和游行抗议活动，并欢迎社会各界人士参与抗议活动。</p>
+<p><B><ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E9%A6%96%E9%83%BD.md#1">美国首都</a>“解体中共 停止迫害法轮功”大集会</B></p>
+<p>自1999年7月20日，中共江泽民发动迫害法轮功修炼者以来，几乎每年的7月20日左右，世界各地的各族裔部分法轮功修炼者都云集美国首都<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md#1">华盛顿DC</a>，举行大规模游行、集会活动，抗议中共迄今长达13年的惨无人道迫害行径，呼吁美国及全球各国政府和社会各界支持、声援“解体中共、停止迫害法轮功”。</p>
+<p>据法轮大法<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc.md#1">华盛顿DC</a>佛学会负责协调集会活动的薛斌先生介绍，今年约有5,000名世界各地的各族裔部分法轮功修炼者汇集华盛顿DC，参加连续两天的数个集会和游行抗议活动，并欢迎社会各界人士参与抗议活动。</p>
 <p>7月12日（星期四）中午，在美国国会山庄前的解体中共、停止迫害法轮功以及声援一亿两千万中国民众退出中共和相关组织集会上，将至少有6名美国国会议员和10名人权和宗教自由组织的代表、以及多名受迫害代表发表演讲。</p>
 <p>据悉，集会组织者已收到5名无法到达现场演讲的美国国会议员的声援法轮功反迫害的信件。</p>
 <p>
-	<figure id="attachment_6611823" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207101031312404-600x400.jpg" alt="2010年7月22日下午，来自世界各地的法轮功学员在美国首都华盛顿的国会山举行“7．20”反迫害集会。美国国会议员与非政府机构、宗教组织及人权团体的代表在集会上声援法轮功学员，呼吁制止中共对法轮功长达十一年的迫害。图为集会现场。(摄影﹕Mark Zou/大纪元)" title="2010年7月22日下午，来自世界各地的法轮功学员在美国首都华盛顿的国会山举行“7．20”反迫害集会。美国国会议员与非政府机构、宗教组织及人权团体的代表在集会上声援法轮功学员，呼吁制止中共对法轮功长达十一年的迫害。图为集会现场。(摄影﹕Mark Zou/大纪元)" width="600" b="400"
-	class="size-large wp-image-6611823" /></a><figcaption class="wp-caption-text">2010年7月22日下午，来自世界各地的法轮功学员在美国首都华盛顿的国会山举行“7．20”反迫害集会。美国国会议员与非政府机构、宗教组织及人权团体的代表在集会上声援法轮功学员，呼吁制止中共对法轮功长达十一年的迫害。图为集会现场。(摄影﹕Mark Zou/大纪元)</figcaption></figure><br />7月13日（星期五）白天，法轮功学员将举办大游行，游行路线从美国白宫附近出发，游行队伍将呈现大法洪传世界、千古奇冤——法轮功受迫害、以及《九评》、退党等主题。</p>
+	<figure id="attachment_6611823" aria-describedby="caption-attachment-6611823" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207101031312404-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207101031312404-600x400.jpg" alt="2010年7月22日下午，来自世界各地的法轮功学员在美国首都华盛顿的国会山举行“7．20”反迫害集会。美国国会议员与非政府机构、宗教组织及人权团体的代表在集会上声援法轮功学员，呼吁制止中共对法轮功长达十一年的迫害。图为集会现场。(摄影﹕Mark Zou/大纪元)" title="2010年7月22日下午，来自世界各地的法轮功学员在美国首都华盛顿的国会山举行“7．20”反迫害集会。美国国会议员与非政府机构、宗教组织及人权团体的代表在集会上声援法轮功学员，呼吁制止中共对法轮功长达十一年的迫害。图为集会现场。(摄影﹕Mark Zou/大纪元)" width="600" b="400"
+	class="size-large wp-image-6611823" /></a><figcaption id="caption-attachment-6611823" class="wp-caption-text">2010年7月22日下午，来自世界各地的法轮功学员在美国首都华盛顿的国会山举行“7．20”反迫害集会。美国国会议员与非政府机构、宗教组织及人权团体的代表在集会上声援法轮功学员，呼吁制止中共对法轮功长达十一年的迫害。图为集会现场。(摄影﹕Mark Zou/大纪元)</figcaption></figure><br />7月13日（星期五）白天，法轮功学员将举办大游行，游行路线从美国白宫附近出发，游行队伍将呈现大法洪传世界、千古奇冤——法轮功受迫害、以及《九评》、退党等主题。</p>
 <p>在游行终点华盛顿纪念碑前，将接着举行大规模公众集会，将有各类社会组织代表和知名人士发表演讲声援法轮功反迫害13年以及声援一亿两千万中国民众退出中共及其相关组织。</p>
 <p>
-	<figure id="attachment_6611838" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207092222532404-600x400.jpg" alt="2012年7月4日，法轮功天国乐团在美国首府华盛顿DC参加美国国庆游行。（摄影：李莎/大纪元） " title="2012年7月4日，法轮功天国乐团在美国首府华盛顿DC参加美国国庆游行。（摄影：李莎/大纪元） " width="600" b="400"
-	class="size-large wp-image-6611838" /></a><figcaption class="wp-caption-text">2012年7月4日，法轮功天国乐团在美国首府华盛顿DC参加美国国庆游行。（摄影：李莎/大纪元）</figcaption></figure><br />如同以往，7月13日（星期五）晚上将在华盛顿纪念碑前、面对白宫方向，举行悼念被中共迫害致死的法轮功学员的公众<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E5%A4%9C%E6%82%BC.md#1">烛光夜悼</a>活动。</p>
-<p>伴随着祥和的音乐，每年的<ahref="https://github.com/wlrgim293/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E5%A4%9C%E6%82%BC.md#1">烛光夜悼</a>活动场面庄严肃穆，悲壮感人，吸引众多路人、游客驻足倾听、用心感受法轮功修炼者一个个悲壮坚贞的因坚持信仰而被中共迫害失去生命的悲惨故事，感受法轮功学员承受无名苦难、呼唤正义良知的高尚境界，共同声援“解体中共、停止迫害法轮功”。<br />
-	<figure id="attachment_6611848" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207092204202404-600x422.jpg" alt="2010年美国首府华盛顿法轮功大型烛光夜悼（摄影：戴兵/大纪元） " title="2010年美国首府华盛顿法轮功大型烛光夜悼（摄影：戴兵/大纪元） " width="600" b="422"
-	class="size-large wp-image-6611848" /></a><figcaption class="wp-caption-text">2010年美国首府华盛顿法轮功大型烛光夜悼（摄影：戴兵/大纪元）</figcaption></figure></p>
+	<figure id="attachment_6611838" aria-describedby="caption-attachment-6611838" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207092222532404-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207092222532404-600x400.jpg" alt="2012年7月4日，法轮功天国乐团在美国首府华盛顿DC参加美国国庆游行。（摄影：李莎/大纪元） " title="2012年7月4日，法轮功天国乐团在美国首府华盛顿DC参加美国国庆游行。（摄影：李莎/大纪元） " width="600" b="400"
+	class="size-large wp-image-6611838" /></a><figcaption id="caption-attachment-6611838" class="wp-caption-text">2012年7月4日，法轮功天国乐团在美国首府华盛顿DC参加美国国庆游行。（摄影：李莎/大纪元）</figcaption></figure><br />如同以往，7月13日（星期五）晚上将在华盛顿纪念碑前、面对白宫方向，举行悼念被中共迫害致死的法轮功学员的公众<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E5%A4%9C%E6%82%BC.md#1">烛光夜悼</a>活动。</p>
+<p>伴随着祥和的音乐，每年的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E5%A4%9C%E6%82%BC.md#1">烛光夜悼</a>活动场面庄严肃穆，悲壮感人，吸引众多路人、游客驻足倾听、用心感受法轮功修炼者一个个悲壮坚贞的因坚持信仰而被中共迫害失去生命的悲惨故事，感受法轮功学员承受无名苦难、呼唤正义良知的高尚境界，共同声援“解体中共、停止迫害法轮功”。<br />
+	<figure id="attachment_6611848" aria-describedby="caption-attachment-6611848" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207092204202404-600x422.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207092204202404-600x422.jpg" alt="2010年美国首府华盛顿法轮功大型烛光夜悼（摄影：戴兵/大纪元） " title="2010年美国首府华盛顿法轮功大型烛光夜悼（摄影：戴兵/大纪元） " width="600" b="422"
+	class="size-large wp-image-6611848" /></a><figcaption id="caption-attachment-6611848" class="wp-caption-text">2010年美国首府华盛顿法轮功大型烛光夜悼（摄影：戴兵/大纪元）</figcaption></figure></p>
 <p><B>法轮功祛病健身 洪传世界</B></p>
 <p>法轮大法（也称法轮功）李洪志先生所传的上乘的佛家修炼大法，以宇宙特性“真、善、忍”为原则，包含五套缓慢、优美的功法动作，修心向善，祛病健身，1992年开始在中国社会公开传授，一切活动都是公开的、自愿的、免费的。1998年国家体育总局对一万二千多名法轮功学员做了身体健康状况抽样调查，显示祛病健身的总有效率高达97.9%。</p>
 <p>对个人来说，修炼法轮功不但能祛病健身，使人变得诚实、善良、宽容、和平，而且能开启智慧，逐渐达到洞悉人生和宇宙奥秘的自在境界；对社会来说，修炼法轮功能增加社会的稳定、包容与祥和，提高人们的整体精神生活质量。因此自传出以来仅凭人传人、心传心便修者日众，1992年至2012年的20年时间内法轮功传遍中国和世界114个国家及地区，目前全球各民族各族裔的修炼者人数超过一亿。法轮功及其创始人李洪志先生获得各国各级政府给予的各界褒奖（1,793）、支持议案（361）和支持信函（1,170）共计3,324项。</p>
@@ -89,36 +89,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11959208.md#1">美中外交部发言人对阵：中共1月份做了啥</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11959707.md#1">纽约州实施疫情限制令 哪些事能做哪些不能</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11959460.md#1">蓬佩奥：中俄伊传播假信息 打击美防疫工作</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13691014.md#1">【菁英论坛】俄乌战后新格局 全球化变半球化</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》两主演双获最佳女主角奖</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13691316.md#1">美国会CECC年度报告 关注法轮功学员被迫害</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/wlrgim293/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wlrgim293/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/9/n3631583.htm">千古奇冤！7·20法轮功反迫害13年美国首都活动通告</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/9/n3631583.htm">千古奇冤！7·20法轮功反迫害13年美国首都活动通告</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wlrgim293/djy/blob/master/gb/12/7/9/n3631583.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wlrgim293/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wlrgim293/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wlrgim293/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/12/7/9/n3631583.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
